--- a/js/mine/index.html
+++ b/js/mine/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="Content-Script-type" content="text/javascript">
-		<meta http-equiv="Content-Style-type" content="text/css">
-		<meta http-equiv="pragma" content="no-cache">
-		<meta http-equiv="cache-control" content="no-cache">
-		<meta http-equiv="expires" content="-1">
-		<meta name="format-detection" content="telephone=no">
-		<meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<link type="text/css" rel="stylesheet" href="/Astral/css/common.css">
-        <link type="text/css" rel="stylesheet" href="/Astral/css/index.css">
-	</head>
-	<body><div class="mobage-game-container" id="mobage-game-container">
-		<div class="wrapper" id="wrapper">
-		<div class="contents"></div>
-		</div>
-	</div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Script-type" content="text/javascript">
+    <meta http-equiv="Content-Style-type" content="text/css">
+    <meta http-equiv="pragma" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta http-equiv="expires" content="-1">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link type="text/css" rel="stylesheet" href="/Astral/css/common.css">
+    <link type="text/css" rel="stylesheet" href="/Astral/css/index.css">
+</head>
+<body><div class="" id="loading" style="height: 100%;width: 100%;position: absolute;top:0;background: #b3b3b3"></div>
+<div class="mobage-game-container" id="mobage-game-container">
+    <div class="wrapper" id="wrapper">
+        <div class="contents"></div>
+    </div>
+</div>
 
-			<script src="../lib/Game.js" crossorigin="anonymous"></script>
-            <script src="../lib/require.js" crossorigin="anonymous"></script>
-            <script>
+<script src="../lib/Game.js" crossorigin="anonymous"></script>
+<script src="../lib/require.js" crossorigin="anonymous"></script>
+<script>
 
-                require.config({ baseUrl: Game.jsUri });
-                require.config({
-                    paths:{
-                        jquery:"lib/jquery-2.0.3.min",
-                        underscore:"lib/underscore-min",
-                        backbone:"lib/backbone-min",
-                        easeljs:"lib/easeljs-0.7.1.min",
-                        tweenjs:"lib/tweenjs-0.5.1.min",
-                        soundjs:"lib/soundjs-0.5.2.min",
-                        movieclip:"lib/movieclip-0.7.1.min",
-                        preloadjs:"lib/preloadjs-0.4.1.min",
-                        createjslite:"lib/createjs-lite",
-                        createjslitecache:"lib/createjs-lite-cache",
-                        createjsliteopengl:"lib/createjs-shell-amd-nocache",
-                        loadmanager:"lib/loadmanager",
-                        typist:"lib/jquery.typist",
-                        flexslider:"lib/jquery.flexslider-min",
-                        finger:"lib/jquery.finger.min",
-                        qrcode:"lib/jquery.qrcode.min",
-                        pex:"lib/pex",
-                        socketio:"lib/socket.io-1.3.6",
-                        subroute:"lib/backbone.subroute.min",
-                        boombox:"lib/boombox",
-                        uaparser:"lib/ua-parser.min"},
-                    shim:{
-                        jquery:{exports:"$"},
-                        underscore:{exports:"_"},
-                        backbone:{
-                            deps:["underscore","jquery"],exports:"Backbone"
-                        },
-                        typist:{deps:["jquery"]},
-                        flexslider:{deps:["jquery"]},
-                        finger:{deps:["jquery"]},
-                        qrcode:{deps:["jquery"]},
-                        tweenjs:{deps:["easeljs"]},
-                        movieclip:{deps:["easeljs","tweenjs"]},
-                        loadmanager:{exports:"LoadManager"},
-                        pex:{exports:"Pex"},subroute:{deps:["backbone"]}
-                    },
-                    waitSeconds:60});
-                var requirejs_createNode = requirejs.createNode;
-                requirejs.createNode = function() { var node = requirejs_createNode.apply(this, arguments); node.setAttribute('crossorigin', 'anonymous'); return node; };
-                require(['mine/app-mine']);
+    require.config({ baseUrl: Game.jsUri });
+    require.config({
+        paths:{
+            jquery:"lib/jquery-2.0.3.min",
+            underscore:"lib/underscore-min",
+            backbone:"lib/backbone-min",
+            easeljs:"lib/easeljs-0.7.1.min",
+            tweenjs:"lib/tweenjs-0.5.1.min",
+            soundjs:"lib/soundjs-0.5.2.min",
+            movieclip:"lib/movieclip-0.7.1.min",
+            preloadjs:"lib/preloadjs-0.4.1.min",
+            createjslite:"lib/createjs-lite",
+            createjslitecache:"lib/createjs-lite-cache",
+            createjsliteopengl:"lib/createjs-shell-amd-nocache",
+            loadmanager:"lib/loadmanager",
+            typist:"lib/jquery.typist",
+            flexslider:"lib/jquery.flexslider-min",
+            finger:"lib/jquery.finger.min",
+            qrcode:"lib/jquery.qrcode.min",
+            pex:"lib/pex",
+            socketio:"lib/socket.io-1.3.6",
+            subroute:"lib/backbone.subroute.min",
+            boombox:"lib/boombox",
+            uaparser:"lib/ua-parser.min"},
+        shim:{
+            jquery:{exports:"$"},
+            underscore:{exports:"_"},
+            backbone:{
+                deps:["underscore","jquery"],exports:"Backbone"
+            },
+            typist:{deps:["jquery"]},
+            flexslider:{deps:["jquery"]},
+            finger:{deps:["jquery"]},
+            qrcode:{deps:["jquery"]},
+            tweenjs:{deps:["easeljs"]},
+            movieclip:{deps:["easeljs","tweenjs"]},
+            loadmanager:{exports:"LoadManager"},
+            pex:{exports:"Pex"},subroute:{deps:["backbone"]}
+        },
+        waitSeconds:60});
+    var requirejs_createNode = requirejs.createNode;
+    requirejs.createNode = function() { var node = requirejs_createNode.apply(this, arguments); node.setAttribute('crossorigin', 'anonymous'); return node; };
+    require(['mine/app-lite']);
 
-            </script>
-	</body>
+</script>
+</body>
 </html>
