--- a/demo/animation.html
+++ b/demo/animation.html
@@ -8,7 +8,7 @@
 
 <script>
 
-    require.config({ baseUrl: '/Astral/demo/js/',
+    require.config({ baseUrl: '/demo/js/',
         paths : {
             text : '../../js/lib/require-text', //text is required
             json : '../../js/lib/require-json' //alias to plugin
