--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
 
     <script>
 
-       require.config({ baseUrl: '/Astral/demo/js/',
+       require.config({ baseUrl: '/js/',
            shim:{
                jquery:{exports:"$"},
                underscore:{exports:"_"},
