--- a/js/mine/index.html
+++ b/js/mine/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="expires" content="-1">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link type="text/css" rel="stylesheet" href="/Astral/css/common.css">
-    <link type="text/css" rel="stylesheet" href="/Astral/css/index.css">
+    <link type="text/css" rel="stylesheet" href="/css/common.css">
+    <link type="text/css" rel="stylesheet" href="/css/index.css">
     <style>
         .player{
             background: #999;
